--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafaela Festas </title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     
@@ -129,7 +129,7 @@
             </div>
 
             <div class="item">
-                <img src="/img/Carros.jpeg" alt="Carros">
+                <img src="./img/Carros.jpeg" alt="Carros">
                 <div class="introduce">
                     <div class="title">Carros</div>
                     <div class="topic">Disney Pixar</div>
@@ -173,7 +173,7 @@
             </div>
 
             <div class="item">
-                <img src="img/ToyStore.png" alt="ToyStore">
+                <img src="./img/ToyStore.png" alt="ToyStore">
                 <div class="introduce">
                     <div class="title">Disney Pixar </div>
                     <div class="topic">Toy Story </div>
@@ -215,7 +215,7 @@
             </div>
 
             <div class="item">
-                <img src="img/Bob-esponja.png">
+                <img src="./img/Bob-esponja.png">
                 <div class="introduce">
                     <div class="title">Nick</div>
                     <div class="topic">Bob-esponja</div>
@@ -260,7 +260,7 @@
             </div>
 
             <div class="item">
-                <img src="img/princesas.jpeg" alt="Princesas disney" />
+                <img src="./img/princesas.jpeg" alt="Princesas disney" />
                 <div class="introduce">
                     <div class="title">Disney Pixar</div>
                     <div class="topic">Princesas</div>
@@ -301,7 +301,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/Galinha.png" alt="Galinha pintadinha" />
+                <img src="./img/Galinha.png" alt="Galinha pintadinha" />
                 <div class="introduce">
                     <div class="title">Turma da Galinha</div>
                     <div class="topic">Galinha Pintadinha</div>
@@ -342,7 +342,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/Ben-10.png" alt="Ben 10" />
+                <img src="./img/Ben-10.png" alt="Ben 10" />
                 <div class="introduce">
                     <div class="title">Cartoon</div>
                     <div class="topic">Ben 10</div>
@@ -383,7 +383,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/Mickey mouse.png" alt="Ben 10" />
+                <img src="./img/Mickey mouse.png" alt="Ben 10" />
                 <div class="introduce">
                     <div class="title">Disney Pixar</div>
                     <div class="topic">Mickey Mouse</div>
@@ -433,6 +433,6 @@
 
 
 
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
