--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="carousel">
         <div class="list">
             <div class="item">
-                <img src="/img/moana.png" alt="Moana">
+                <img src="./img/moana.png" alt="Moana">
                 <div class="introduce">
                     <div class="title">Disney Pixar</div>
                     <div class="topic">Moana</div>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="item">
-                <img src="/img/barbie.png" alt="Barbie">
+                <img src="./img/barbie.png" alt="Barbie">
                 <div class="introduce">
                     <div class="title">Mattel</div>
                     <div class="topic">Barbie</div>
