--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/icons8-balloons-64.png" type="image/x-icon">
     <title>Rafaela Festas </title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
