alguns erros arrumados

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
 
             <ul>
-                <li class="active"><a href="#">Inicio</a></li>
+                <li class="active"><a href="index.html">Inicio</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="Temas.html">Alocar Tema</a></li>
                 <li><a href="#">contato</a></li>
@@ -52,10 +52,10 @@
     <section class="sectionservice" aria-labelledby="service-label">
         <div class="container">
 
-          <p class="section-subtitle" id="service-label">What We Do?</p>
+          <p class="section-subtitle" id="service-label">Sobre</p>
 
           <h2 class="h2 section-title">
-            The service we offer is specifically designed to meet your needs.
+           Serviços de Qualidade encontra Aqui
           </h2>
 
           <ul class="grid-list">
@@ -67,15 +67,14 @@
                   <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">24/7 Support</h3>
+                <h3 class="h4 card-title">24/7 Suporte</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  Aqui o suporte é garantido para que sua festa aconteça com muito mais facilidade. 
                 </p>
 
                 <a href="#" class="btn-text">
-                  <span class="span">Learn More</span>
+                  <span class="span">Veja mais </span>
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
@@ -90,15 +89,14 @@
                   <ion-icon name="shield-checkmark-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Secure Payments</h3>
+                <h3 class="h4 card-title">Pagamento Seguro</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  Aqui seu pagamento é garantido para que sua festa aconteça com muito mais facilidade.
                 </p>
 
                 <a href="#" class="btn-text">
-                  <span class="span">Learn More</span>
+                  <span class="span">Veja mais </span>
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
@@ -106,28 +104,6 @@
               </div>
             </li>
 
-            <li>
-              <div class="service-card">
-
-                <div class="card-icon">
-                  <ion-icon name="cloud-download-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <h3 class="h4 card-title">Daily Updates</h3>
-
-                <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
-                </p>
-
-                <a href="#" class="btn-text">
-                  <span class="span">Learn More</span>
-
-                  <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                </a>
-
-              </div>
-            </li>
 
             <li>
               <div class="service-card">
@@ -136,15 +112,14 @@
                   <ion-icon name="pie-chart-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Market Research</h3>
+                <h3 class="h4 card-title">Rapido  e Eficiente </h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  Garantimos que sua festa aconteça com muito mais facilidade.
                 </p>
 
                 <a href="#" class="btn-text">
-                  <span class="span">Learn More</span>
+                  <span class="span">Veja mais </span>
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
@@ -157,201 +132,7 @@
         </div>
       </section>
 
-
-
-
-
-      <!-- 
-        - #ABOUT
-      -->
-
-      <section class="about" aria-labelledby="about-label">
-        <div class="container">
-
-          <figure class="about-banner">
-            <img src="./assets/images/about-banner.png" width="800" height="580" loading="lazy" alt="about banner"
-              class="w-100">
-          </figure>
-
-          <div class="about-content">
-
-            <p class="section-subtitle" id="about-label">Why Choose Us?</p>
-
-            <h2 class="h2 section-title">
-              We bring solutions to make life easier for our clients.
-            </h2>
-
-            <ul>
-
-              <li class="about-item">
-                <div class="accordion-card expanded" data-accordion>
-
-                  <h3 class="card-title">
-                    <button class="accordion-btn" data-accordion-btn>
-                      <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
-
-                      <spna class="span h5">Professional Design</spna>
-                    </button>
-                  </h3>
-
-                  <p class="accordion-content">
-                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-                    sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna,
-                    vel.
-                  </p>
-
-                </div>
-              </li>
-
-              <li class="about-item">
-                <div class="accordion-card" data-accordion>
-
-                  <h3 class="card-title">
-                    <button class="accordion-btn" data-accordion-btn>
-                      <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
-
-                      <spna class="span h5">Top-Notch Support</spna>
-                    </button>
-                  </h3>
-
-                  <p class="accordion-content">
-                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-                    sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna,
-                    vel.
-                  </p>
-
-                </div>
-              </li>
-
-              <li class="about-item">
-                <div class="accordion-card" data-accordion>
-
-                  <h3 class="card-title">
-                    <button class="accordion-btn" data-accordion-btn>
-                      <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
-
-                      <spna class="span h5">Exclusive Assets</spna>
-                    </button>
-                  </h3>
-
-                  <p class="accordion-content">
-                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-                    sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna,
-                    vel.
-                  </p>
-
-                </div>
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-      </section>
-
       
-  <!-- 
-    - #FOOTER
-  -->
-
-  <footer class="footer">
-    <div class="container grid-list">
-
-      <div class="footer-brand">
-        <p class="footer-text">
-          &copy; 2022 codewithsadee. <br> All rights reserved.
-        </p>
-
-        <ul class="social-list">
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-dribbble"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
-
-      </div>
-
-      <ul class="footer-list">
-
-        <li>
-          <p class="h4 footer-list-title">Get in Touch</p>
-        </li>
-
-        <li>
-          <address class="footer-text">
-            Moonshine St. 14/05 Light City, London, United Kingdom
-          </address>
-        </li>
-
-        <li>
-          <a href="mailto:info@email.com" class="footer-link">info@email.com</a>
-        </li>
-
-        <li>
-          <a href="tel:001234567890" class="footer-link">00 (123) 456 78 90</a>
-        </li>
-
-      </ul>
-
-      <ul class="footer-list">
-
-        <li>
-          <p class="h4 footer-list-title">Learn More</p>
-        </li>
-
-        <li>
-          <a href="#" class="footer-link">About Us</a>
-        </li>
-        <p class="footer-text">
-          Subscribe to our newsletter to get our news & deals delivered to you.
-        </p>
-
-        <form action="" class="input-wrapper">
-          <input type="email" name="email_address" placeholder="Email Address" required class="input-field">
-
-          <button type="submit" class="submit-btn">Join</button>
-        </form>
-
-      </div>
-
-    </div>
-  </footer>
-
-
-
-
-
-  <!-- 
-    - custom js link
-  -->
   <script src="./js/scripts"></script>
 
   <!-- 
