--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <ul>
                 <li class="active"><a href="index.html">Inicio</a></li>
                 <li><a href="#">Sobre</a></li>
+                <li><a href="#service-label">Serviços</a></li>
                 <li><a href="Temas.html">Alocar Tema</a></li>
                 <li><a href="#">contato</a></li>
                 <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -52,9 +53,9 @@
     <section class="sectionservice" aria-labelledby="service-label">
         <div class="container">
 
-          <p class="section-subtitle" id="service-label">Sobre</p>
+          <p class="section-subtitle" id="service-label">Serviços</p>
 
-          <h2 class="h2 section-title">
+          <h2 class="h2section-title">
            Serviços de Qualidade encontra Aqui
           </h2>
 
