arrumando pequenas coisas

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store</title>
+    <link rel="shortcut icon" href="./img/icons8-balloons-64.png" type="image/x-icon">
+    <title>Rafaela Festas</title>
 
     <!-- link icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
