--- a/Temas.html
+++ b/Temas.html
@@ -30,8 +30,8 @@
                      <li> 
                         <a href="#">ADM</a>
                         <ul class="drop-menu">
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Cadastro</a></li>
+                            <li><a href="login.html">Login</a></li>
+                            <li><a href="Cadastro.html">Cadastro</a></li>
                             <li><a href="#">Fornecedores</a></li>
         
                         </ul>
