--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   Aqui o suporte é garantido para que sua festa aconteça com muito mais facilidade. 
                 </p>
 
-                <a href="#" class="btn-text">
+                <a href="Contato.html" class="btn-text">
                   <span class="span">Veja mais </span>
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -135,7 +135,7 @@
       </section>
 
       
-  <script src="./js/scripts"></script>
+  <script src="./js/scripts.js"></script>
 
   <!-- 
     - ionicon
