CSS: arrumando na pagina de login cadastro e serviços

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -57,7 +59,7 @@
           <p class="section-subtitle" id="service-label">Serviços</p>
 
           <h2 class="h2section-title">
-           Serviços de Qualidade encontra Aqui
+          Serviços de Qualidade encontra Aqui
           </h2>
 
           <ul class="grid-list">
