CSS: nav bar arrumado

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="small-img">
                 <img onclick="myTshirt(this.src)" src="./img/barbie.png" alt="">
                 <img onclick="myTshirt(this.src)" src="./img/Carros.jpeg" alt="">
-                <img onclick="myTshirt(this.src)" src="./img/ToyStore.png" alt="">
+                <img onclick="myTshirt(this.src)" src="./img/Ben-10.png" alt="">
             </div>
         </div>
     </div>
