--- a/index.html
+++ b/index.html
@@ -13,24 +13,51 @@
     <!-- link file css -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/inicio.css">
+
+    <!-- links Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="contanier">
 
-        <nav>
-            <div class="logo">
-                <h1>RF</h1>
+        <nav class="navbar-expand-lg navbar bg-body-tertiary fixed-top">
+            <div class="container-fluid logo">
+              <a class="navbar-brand" href="#"><h1>RF</h1></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">RF</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#service-label">Serviços</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Temas.html">Alocar Temas</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">contato</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="#"><i class="nav-link fa-solid fa-cart-shopping"></i></a>
+                    </li>
             </div>
-
-            <ul>
-                <li class="active"><a href="index.html">Inicio</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#service-label">Serviços</a></li>
-                <li><a href="Temas.html">Alocar Tema</a></li>
-                <li><a href="#">contato</a></li>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-            </ul>
-        </nav>
+          </div>
+        </div>
+      </nav>
 
         <div class="content">
             <div class="div-text">
