--- a/index.html
+++ b/index.html
@@ -20,42 +20,46 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 </head>
-<body>
+<body data-bs-theme="light">
     <div class="contanier">
-
         <nav class="navbar-expand-lg navbar bg-body-tertiary fixed-top">
+
+          <!-- logo clicavél-->
             <div class="container-fluid logo">
               <a class="navbar-brand" href="#"><h1>RF</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
+
+              <!-- Logo diminuida para mobile -->
               <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                   <h5 class="offcanvas-title" id="offcanvasNavbarLabel">RF</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
+
                 <div class="offcanvas-body">
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Sobre</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#service-label">Serviços</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="Temas.html">Alocar Temas</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">contato</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="#"><i class="nav-link fa-solid fa-cart-shopping"></i></a>
-                    </li>
-            </div>
-          </div>
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Sobre</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#service-label">Serviços</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="Temas.html">Alocar Temas</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">contato</a>
+                      </li>
+                      <li class="nav-item">
+                        <a href="#"><i class="nav-link fa-solid fa-cart-shopping"></i></a>
+                      </li>
+                </div>  
+              </div>
         </div>
       </nav>
 
@@ -162,6 +166,16 @@
 
         </div>
       </section>
+      <footer class="text-center">
+        <section class="container p-4 pb-0 mb-4">
+          <a class="btn" href="#!"><i class="bi bi-whatsapp"></i></a>
+          <a class="btn" href="#!"><i class="bi bi-instagram"></i></a>
+          <a class="btn" href="#!"><i class="bi bi-twitter"></i></a>
+        </section>
+        <div class="p-3">
+            2024 <i class="bi bi-c-circle"></i> Desenvolvido pela equipe Byanca | Projeto fictício sem fins comerciais.
+        </div>
+      </footer>
 
       
   <script src="./js/scripts.js"></script>
