--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 </head>
 <body data-bs-theme="light">
-    <div class="contanier">
+    <header class="contanier">
         <nav class="navbar-expand-lg navbar bg-body-tertiary fixed-top">
 
           <!-- logo clicavél-->
@@ -83,7 +83,7 @@
                 <img onclick="myTshirt(this.src)" src="./img/Ben-10.png" alt="">
             </div>
         </div>
-    </div>
+      </header>
     <section class="sectionservice" aria-labelledby="service-label">
         <div class="container">
 
@@ -166,6 +166,7 @@
 
         </div>
       </section>
+
       <footer class="text-center">
         <section class="container p-4 pb-0 mb-4">
           <a class="btn" href="#!"><i class="bi bi-whatsapp"></i></a>
@@ -177,7 +178,9 @@
         </div>
       </footer>
 
-      
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"></script>    
   <script src="./js/scripts.js"></script>
 
   <!-- 
