--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   Aqui o suporte é garantido para que sua festa aconteça com muito mais facilidade. 
                 </p>
 
-                <a href="Contato.html" class="btn-text">
+                <a href="#" class="btn-text">
                   <span class="span">Veja mais </span>
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
