mais algumas alterações

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
       <footer class="text-center">
         <section class="container p-4 pb-0 mb-4">
-          <a class="btn" href="#!"><i class="bi bi-whatsapp"></i></a>
-          <a class="btn" href="#!"><i class="bi bi-instagram"></i></a>
+          <a class="btn" href=" https://wa.me/qr/EOCNNKM4XUHDM1 "><i class="bi bi-whatsapp"></i></a>
+          <a class="btn" href="https://www.instagram.com/rafaela_festas_santos?igsh=MXBvMmJ0YXdyeWc4YQ=="><i class="bi bi-instagram"></i></a>
           <a class="btn" href="#!"><i class="bi bi-twitter"></i></a>
         </section>
         <div class="p-3">
