Logica de carrinho de compras adicionada
só colocar no projeto e fazer as alterações que quiser no HTML e no CSS de acordo com o seu carrinho de compras

--- a/Temas.html
+++ b/Temas.html
@@ -10,7 +10,7 @@
 <body>
     
     <header>
-        <nav>
+        <nav class="navBar">
             <div class="wrapper">
                 <div class="logo"><a href="#">RF</a></div>
                   <ul class="navlink">
@@ -111,7 +111,7 @@
                         </div>
                         <div>
                             <p>Cenário:</p>
-                            <p>cASA DA BARBIE</p>
+                            <p>CASA DA BARBIE</p>
                         </div>
                         <div>
                             <p>Mesa</p>
@@ -119,7 +119,7 @@
                         </div>
                         <div>
                             <p>Figuras:</p>
-                            <p>BARBIE,KEN e outros </p>
+                            <p>BARBIE, KEN e outros </p>
                         </div>
                     </div>
                     <div class="checkout">
