--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="Temas.html">Alocar Temas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">contato</a>
+                        <a class="nav-link" href="#footer">contato</a>
                       </li>
                       <li class="nav-item">
                         <a href="#"><i class="nav-link fa-solid fa-cart-shopping"></i></a>
@@ -168,7 +168,7 @@
       </section>
 
       <footer class="text-center">
-        <section class="container p-4 pb-0 mb-4">
+        <section class="container p-4 pb-0 mb-4" id="footer">
           <a class="btn" href=" https://wa.me/qr/EOCNNKM4XUHDM1 "><i class="bi bi-whatsapp"></i></a>
           <a class="btn" href="https://www.instagram.com/rafaela_festas_santos?igsh=MXBvMmJ0YXdyeWc4YQ=="><i class="bi bi-instagram"></i></a>
           <a class="btn" href="#!"><i class="bi bi-twitter"></i></a>
