--- a/index.html
+++ b/index.html
@@ -41,22 +41,19 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre</a>
+                        <a class="nav-link" href="#about">Sobre</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#service-label">Serviços</a>
                       </li>
                       <li class="nav-item">
+                        <a class="nav-link" href="#contact">contato</a>
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" href="Temas.html">Alocar Temas</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">contato</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="#"><i class="nav-link fa-solid fa-cart-shopping"></i></a>
                       </li>
                 </div>  
               </div>
@@ -84,6 +81,24 @@
             </div>
         </div>
       </header>
+      <section class="about" id="about">
+        <div class="container">
+          <div class="about-content">
+            <div class="about-text">
+              <h2 class="section-subtitle">Sobre Rafaela</h2>
+              <p>Olá, meu nome é Rafaela e sou especialista em tornar festas infantis momentos inesquecíveis! Com minha paixão por eventos e mais de 5 anos de experiência na área, trabalho para garantir que cada festa seja única e cheia de alegria.</p>
+              <p>Desde decorações temáticas até entretenimento personalizado, estou aqui para transformar seus sonhos em realidade. Com atenção aos detalhes e dedicação, faço questão de criar uma experiência mágica para cada criança e seus convidados.</p>
+              <p>Seja qual for o tema ou tamanho da festa, estou preparada para ajudar a tornar esse dia especial ainda mais especial. Entre em contato e vamos começar a planejar a festa dos sonhos juntos!</p>
+            </div>
+            <div class="about-image">
+              <img src="./img/Rafaela.jpeg" alt="Foto de Rafaela">
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
     <section class="sectionservice" aria-labelledby="service-label">
         <div class="container">
 
@@ -164,6 +179,26 @@
 
           </ul>
 
+        </div>
+      </section>
+
+      <section class="contact">
+        <div class="container" id="contact">
+          <h2 class="section-title">Entre em Contato</h2>
+          <div class="contact-info">
+            <div class="contact-item">
+              <i class="fas fa-map-marker-alt"></i>
+              <p>Rua Exemplo, 123 - Cidade Exemplo</p>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <p>(11) 4002-8922</p>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <p>rafaelafesta@gmail.com</p>
+            </div>
+          </div>
         </div>
       </section>
 
