--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <ul id="lista-navbar" class="navbar-nav justify-content-end flex-grow-1 pe-3">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                       </li>
@@ -167,6 +167,8 @@
         </div>
       </section>
 
+
+      <!-- Rodapé do projeto Rafaela Festas -->
       <footer class="text-center">
         <section class="container p-4 pb-0 mb-4" id="footer">
           <a class="btn" href=" https://wa.me/qr/EOCNNKM4XUHDM1 "><i class="bi bi-whatsapp"></i></a>
