--- a/Temas.html
+++ b/Temas.html
@@ -13,11 +13,11 @@
         <nav class="navBar">
             <div class="wrapper">
                 <div class="logo"><a href="#">RF</a></div>
-                  <ul class="navlink">
+                <ul class="navlink">
         
-                     <li> <a href="index.html">Início</a></li>
-                     <li> <a href="#'">Sobre</a></li>
-                     <li> 
+                    <li> <a href="index.html">Início</a></li>
+                    <li> <a href="index.html">Sobre</a></li>
+                    <li> 
                         <a href="#">Serviços</a>
                     <ul class="drop-menu">
                         <li><a href="#">Produtos</a></li>
@@ -26,8 +26,8 @@
                     </ul>
                     
                     </li>
-                     <li> <a href="#">Contato</a></li>
-                     <li> 
+                    <li> <a href="#contact">Contato</a></li>
+                    <li> 
                         <a href="#">ADM</a>
                         <ul class="drop-menu">
                             <li><a href="login.html">Login</a></li>
@@ -315,7 +315,7 @@
                     <div class="title">Turma da Galinha pintadinha</div>
                     <div class="des">
                         <!-- lorem 50 -->
-                         A festa da Galinha Pintadinha é uma celebração animada e colorida, especialmente popular entre as crianças. A decoração é repleta de elementos característicos do desenho animado, como balões azuis com pintinhas brancas, painéis temáticos e toalhas de mesa personalizadas. 
+                        A festa da Galinha Pintadinha é uma celebração animada e colorida, especialmente popular entre as crianças. A decoração é repleta de elementos característicos do desenho animado, como balões azuis com pintinhas brancas, painéis temáticos e toalhas de mesa personalizadas. 
                         </div>
                     <div class="specifications">
                         <div>
@@ -348,7 +348,7 @@
                     <div class="topic">Ben 10</div>
                     <div class="des">
                         <!-- 20 lorem -->
-                      Uma festa inspirada em Ben 10 é uma oportunidade emocionante para os fãs mergulharem no mundo dos extraterrestres, dos poderes alienígenas e das batalhas intergalácticas.
+                    Uma festa inspirada em Ben 10 é uma oportunidade emocionante para os fãs mergulharem no mundo dos extraterrestres, dos poderes alienígenas e das batalhas intergalácticas.
                     </div>
                     <button class="seeMore">Veja mais &#8599</button>
                 </div>
