--- a/index.html
+++ b/index.html
@@ -182,10 +182,9 @@
         </div>
       </section>
 
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD -->
 
       <!-- Rodapé do projeto Rafaela Festas -->
-=======
       <section class="contact">
         <div class="container" id="contact">
           <h2 class="section-title">Entre em Contato</h2>
