--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 </head>
 <body data-bs-theme="light">
+
+  <!-- Cabeçalho do projeto -->
     <header class="contanier">
         <nav class="navbar-expand-lg navbar bg-body-tertiary fixed-top">
 
@@ -81,6 +83,8 @@
             </div>
         </div>
       </header>
+
+      <!-- Fim do cabeçalho e inicio da seção sobre -->
       <section class="about" id="about">
         <div class="container">
           <div class="about-content">
@@ -98,7 +102,7 @@
       </section>
 
 
-
+      <!-- Seção de serviços -->
     <section class="sectionservice" aria-labelledby="service-label">
         <div class="container">
 
@@ -206,6 +210,7 @@
       </section>
 
  <!-- >>>>>>> 8509a849c213bcbbd6d0a2a2e6cb58281492f851 -->
+ <!-- Footer do projeto -->
       <footer class="text-center">
         <section class="container p-4 pb-0 mb-4" id="footer">
           <a class="btn" href=" https://wa.me/qr/EOCNNKM4XUHDM1 "><i class="bi bi-whatsapp"></i></a>
@@ -217,9 +222,13 @@
         </div>
       </footer>
 
+
+      <!-- Link de interação do Boostrap-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-      crossorigin="anonymous"></script>    
+      crossorigin="anonymous"></script>  
+      
+      <!-- Link de arquivo JavaScript não sei para que serve -->
   <script src="./js/scripts.js"></script>
 
   <!-- 
