--- a/login.html
+++ b/login.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Link do icone -->
     <link rel="shortcut icon" href="./img/icons8-balloons-64.png" type="image/x-icon">
+
+    <!-- Link dos arquivos HTML -->
     <link rel="stylesheet" href="./css/LoginEcadastro.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Login</title>
 </head>
 <body>
     <div class="main-login">
+        <!-- Div left representa elementos que mostram a direita com a imagem -->
         <div class="left-login">
             <h1>Faça login <br /> e vamos as compras</h1>
             <img src="./img/ariel-na-concha1.gif.gif" class= "left-login-image" alt="Computador animado">
         </div>
+        <!-- div right representa elementos que mostram a esquerda como o cartão de login-->
         <div class="right-login">
             <div class="card-login">
                 <h1>LOGIN</h1>
@@ -31,7 +37,9 @@
         </div>
     </div>
     <div class="arrows">
-        <a href="index.html" id="back">Voltar &#8599</a>
+        <!-- Ao invés de voltar a parte inicial voltar a temas pois pode ocorrer tal pensamento :
+         'Antes do cadastro quero verificar se eles tem tal tema '-->
+        <a href="Temas.html" id="back">Voltar &#8599</a>
     </div>
 </body>
 </html>
