--- a/Temas.html
+++ b/Temas.html
@@ -16,11 +16,11 @@
                 <ul class="navlink">
         
                     <li> <a href="index.html">Início</a></li>
-                    <li> <a href="index.html">Sobre</a></li>
+                    <li> <a href="index.html#about">Sobre</a></li>
                     <li> 
                         <a href="#">Serviços</a>
                     <ul class="drop-menu">
-                        <li><a href="#">Produtos</a></li>
+                        <li><a href="Temas.html">Produtos</a></li>
                         <li><a href="Temas.html">Temas</a></li>
                         <li><a href="#">Festas</a></li>
                     </ul>
