--- a/Temas.html
+++ b/Temas.html
@@ -26,7 +26,7 @@
                     </ul>
                     
                     </li>
-                    <li> <a href="#contact">Contato</a></li>
+                    <li> <a href="index.html#contact">Contato</a></li>
                     <li> 
                         <a href="#">ADM</a>
                         <ul class="drop-menu">
