sininho ao adicionar ao carrinho

--- a/Temas.html
+++ b/Temas.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="checkout">
                         <button>Ver itens</button>
-                        <button>Adicionar ao carrinho</button>
+                        <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="checkout">
                         <button>Ver itens</button>
-                        <button>Adicionar ao carrinho</button>
+                        <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                     </div>
                     <div class="checkout">
                         <button>Ver itens</button>
-                        <button>Adicionar ao carrinho</button>
+                        <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
             </div>
@@ -208,8 +208,8 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Adcionar ao Carrinho</button>
-                        <button>Finalizar</button>
+                        <button>Adicionar ao Carrinho</button>
+                        <button class="add-carrinho">Finalizar</button>
                     </div>
                 </div>
             </div>
@@ -254,7 +254,7 @@
                     </div>
                     <div class="checkout">
                         <button>Ver itens</button>
-                        <button>Adicionar ao carrinho</button>
+                        <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
             </div>
@@ -296,7 +296,7 @@
                     </div>
                     <div class="checkout">
                         <button>Ver itens</button>
-                        <button>Adicionar ao carrinho</button>
+                        <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
             </div>
@@ -337,7 +337,7 @@
                     </div>
                     <div class="checkout">
                         <button>Ver itens</button>
-                        <button>Adicionar ao carrinho</button>
+                        <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
             </div>
@@ -377,7 +377,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Adcionar ao carrinho</button>
+                        <button class="add-carrinho">Adcionar ao carrinho</button>
                         <button>Finalizar</button>
                     </div>
                 </div>
@@ -419,7 +419,7 @@
                     </div>
                     <div class="checkout">
                         <button>Ver itens</button>
-                        <button>Adicionar ao carrinho</button>
+                        <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
             </div>
