arrumando som de Toy story

--- a/Temas.html
+++ b/Temas.html
@@ -208,8 +208,8 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Adicionar ao Carrinho</button>
-                        <button class="add-carrinho">Finalizar</button>
+                        <button class="add-carrinho">Adicionar ao Carrinho</button>
+                        <button>Finalizar</button>
                     </div>
                 </div>
             </div>
