--- a/Temas.html
+++ b/Temas.html
@@ -149,7 +149,7 @@
                     <div class="specifications">
                         <div>
                             <p>Decoração</p>
-                            <p>Cores:Vermelho;
+                            <p>Cores:<br/>Vermelho;
                                 Marrom e azul.</p>
                         </div>
                         <div>
