--- a/Cadastro.html
+++ b/Cadastro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/icons8-balloons-64.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/LoginEcadastro.css">
+    <link rel="stylesheet" href="./css/midia.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Cadastro</title>
 </head>
