--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="./img/icons8-balloons-64.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/LoginEcadastro.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/midia.css">
     <title>Login</title>
 </head>
 <body>
