--- a/Temas.html
+++ b/Temas.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="./img/icons8-balloons-64.png" type="image/x-icon">
     <title>Rafaela Festas </title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/midia.css">
 </head>
 <body>
     
