--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
     <!-- link file css -->
+    <link rel="stylesheet" href="./css/midia.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/inicio2.css">
 
