--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- link file css -->
     <link rel="stylesheet" href="./css/midia.css">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/inicio2.css">
+    <link rel="stylesheet" href="./css/Inicio.css">
 
     <!-- links Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
