--- a/Temas.html
+++ b/Temas.html
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Ver itens</button>
+                        <button class="verItens">Ver itens</button>
                         <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Ver itens</button>
+                        <button class="verItens">Ver itens</button>
                         <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Ver itens</button>
+                        <button class="verItens">Ver itens</button>
                         <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Ver itens</button>
+                        <button class="verItens">Ver itens</button>
                         <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Ver itens</button>
+                        <button class="verItens">Ver itens</button>
                         <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Ver itens</button>
+                        <button class="verItens">Ver itens</button>
                         <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -378,7 +378,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="add-carrinho">Adcionar ao carrinho</button>
+                        <button class="add-carrinho">Adicionar ao carrinho</button>
                         <button>Finalizar</button>
                     </div>
                 </div>
@@ -419,7 +419,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button>Ver itens</button>
+                        <button class="verItens">Ver itens</button>
                         <button class="add-carrinho">Adicionar ao carrinho</button>
                     </div>
                 </div>
@@ -432,8 +432,22 @@
         </div>
     </div>
 
+    <table id="carrinho">
+        <thead>
+            <tr>
+                <th>Item</th>
+                <th>Quantidade</th>
+                <th>Opções</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Aqui serão inseridos os itens adicionados ao carrinho -->
+        </tbody>
+    </table>
+
 
 
     <script src="./js/main.js"></script>
+    <script src="./js/adicionar.js"></script>
 </body>
 </html>
