Ainda faltam alterações importantes

--- a/Temas.html
+++ b/Temas.html
@@ -442,8 +442,17 @@
         </thead>
         <tbody>
             <!-- Aqui serão inseridos os itens adicionados ao carrinho -->
+            <!-- Exemplo de um item na tabela -->
+            <tr data-id="1">
+                <td>Item 1</td>
+                <td>1</td>
+                <td>
+                    <button class="btn-excluir">Excluir</button>
+                </td>
+            </tr>
         </tbody>
     </table>
+    
 
 
 
