--- a/Temas.html
+++ b/Temas.html
@@ -81,8 +81,8 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens">Ver itens</button>
-                        <button class="add-carrinho">Adicionar ao carrinho</button>
+                        <button class="verItens"> <a href="html.html">Ver itens</a></button>
+                        <button class="add-carrinho">Finalizar</button>
                     </div>
                 </div>
             </div>
@@ -124,8 +124,8 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens">Ver itens</button>
-                        <button class="add-carrinho">Adicionar ao carrinho</button>
+                        <button class="verItens"> <a href="html.html"> Ver itens </a></button>
+                        <button class="add-carrinho">Finalizar</button>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="checkout">
                         <button class="verItens">Ver itens</button>
-                        <button class="add-carrinho">Adicionar ao carrinho</button>
+                        <button class="add-carrinho"> <a href="html.html">Finalizar</a></button>
                     </div>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="add-carrinho">Adicionar ao Carrinho</button>
+                        <button class="add-carrinho">  <a href="html.html">Ver Itens</a></button>
                         <button>Finalizar</button>
                     </div>
                 </div>
@@ -254,8 +254,8 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens">Ver itens</button>
-                        <button class="add-carrinho">Adicionar ao carrinho</button>
+                        <button class="verItens"> <a href="html.html"> Ver itens </a></button>
+                        <button class="add-carrinho">Finalizar</button>
                     </div>
                 </div>
             </div>
@@ -296,8 +296,8 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens">Ver itens</button>
-                        <button class="add-carrinho">Adicionar ao carrinho</button>
+                        <button class="verItens"> <a href="html.html"> Ver itens </a> </button>
+                        <button class="add-carrinho">Finalizar</button>
                     </div>
                 </div>
             </div>
@@ -337,8 +337,8 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens">Ver itens</button>
-                        <button class="add-carrinho">Adicionar ao carrinho</button>
+                        <button class="verItens">  <a href="html.html">Ver itens </a></button>
+                        <button class="add-carrinho">Finalizar</button>
                     </div>
                 </div>
             </div>
@@ -378,7 +378,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="add-carrinho">Adicionar ao carrinho</button>
+                        <button class="add-carrinho"> <a href="html.html">ver itens</a></button>
                         <button>Finalizar</button>
                     </div>
                 </div>
@@ -419,8 +419,8 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens">Ver itens</button>
-                        <button class="add-carrinho">Adicionar ao carrinho</button>
+                        <button class="verItens"> <a href="html.html">Ver itens </a></button>
+                        <button class="add-carrinho">Finalizar</button>
                     </div>
                 </div>
             </div>
@@ -446,11 +446,6 @@
             
         </tbody>
     </table>
-    
-
-
-
     <script src="./js/main.js"></script>
-    <script src="./js/adicionar.js"></script>
 </body>
 </html>
